[package]
name = "signed"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["signed"]
description = "signed trait"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-signed.git"
homepage = "https://github.com/nathanfaucett/rs-signed"

[dependencies]
num = {git = "https://github.com/nathanfaucett/rs-num.git"}
